@@ -90,8 +90,17 @@ foreach ($macros as $name => $value)
 ksort($macros);
 
 print "Files containing macros:\n";
-foreach (Tools_WADF::listTemplateFiles($dir) as $file) {
+$files = Tools_WADF::listTemplateFiles($dir);
+$files_filtered = $wadf->filterTemplateFileListAgainstExcluded($dir, $files);
+foreach ($files_filtered as $file) {
 	print ' - ' . str_replace($dir . '/', '', $file) . "\n";
+}
+$diff = array_diff($files, $files_filtered);
+if (count($diff) > 0) {
+	print "(Following files ignored due to template_exclude_paths):\n";
+	foreach ($diff as $file) {
+		print ' - ' . str_replace($dir . '/', '', $file) . "\n";
+	}
 }
 
 print "\nMacros defined and used in this deployment:\n";
